tooltip: fix small issues with regular tooltip reading title - regular tooltip should also work without a defining any formatter, for example it should work with AutoTooltip - also add `tooltipTextMaxLength` option that will truncate text when text is too long - add option to delay showing/opening the custom tooltip

--- a/plugins/slick.customTooltip.css
+++ b/plugins/slick.customTooltip.css
@@ -4,6 +4,7 @@
   border: 2px solid #acacac;
   border-radius: 4px;
   color: inherit;
+  font-size: 7.5pt;
   padding: 7px;
   height: auto;
   width: auto;
